Update main screen matrix to be colorful

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -59,10 +59,234 @@
 
     <div class="scrolling-binary">
       <div class="right">
-        01101111 01110010 01101001 01100111 01101001 01101110 01101111 01110010 01101001 01100111
+        <span style="color: #31afb7">x</span>
+        <span style="color: #5d25b1">`</span>
+        <span style="color: #a5c509">8 </span>
+        <span style="color: #008000">0 </span>
+        <span style="color: #5d25b1"># </span>
+        <span style="color: #31afb7">= </span>
+        <span style="color: #ce1a1a">v </span>
+        <span style="color: #008000">7 </span>
+        <span style="color: #fff">m</span>
+        <span style="color: #5d25b1">b</span>
+        <span style="color: #a5c509">" </span>
+        <span style="color: #008000">| </span>
+        <span style="color: #fff">y </span>
+        <span style="color: #5d25b1">9 </span>
+        <span style="color: #a5c509"># </span>
+        <span style="color: #5d25b1">8 </span>
+        <span style="color: #ce1a1a">M </span>
+        <span style="color: #31afb7">] </span>
+        <span style="color: #a97619">_ </span>
+        <span style="color: #a5c509">+ </span>
+        <span style="color: #008000">k</span>
+        <span style="color: #a97619">l </span>
+        <span style="color: #ce1a1a">$ </span>
+        <span style="color: #5d25b1">#</span>
+        <span style="color: #a97619">m</span>
+        <span style="color: #fff">n </span>
+        <span style="color: #31afb7">x </span>
+        <span style="color: #008000">-</span>
+        <span style="color: #31afb7">( </span>
+        <span style="color: #a97619">]</span>
+        <span style="color: #a5c509">e </span>
+        <span style="color: #5d25b1">f </span>
+        <span style="color: #008000">l</span>
+        <span style="color: #fff">]</span>
+        <span style="color: #ce1a1a">> </span>
+        <span style="color: #31afb7">! </span>
+        <span style="color: #5d25b1">0</span>
+        <span style="color: #a97619">3 </span>
+        <span style="color: #008000">@</span>
+        <span style="color: #a5c509">j</span>
+        <span style="color: #ce1a1a">n</span>
+        <span style="color: #31afb7">o </span>
+        <span style="color: #008000">x</span>
+        <span style="color: #a97619">~</span>
+        <span style="color: #a5c509">`</span>
+        <span style="color: #fff">.</span>
+        <span style="color: #31afb7">x</span>
+        <span style="color: #5d25b1">l </span>
+        <span style="color: #ce1a1a">t</span>
+        <span style="color: #008000">y</span>
+        <span style="color: a97619">]</span>
+        <span style="color: 31afb7">[</span>
+        <span style="color: fff">s</span>
+        <span style="color: ce1a1a">x </span>
+        <span style="color: 008000">k </span>
+        <span style="color: 5d25b1">j </span>
+
+        <span style="color: #31afb7">x</span>
+        <span style="color: #5d25b1">`</span>
+        <span style="color: #a5c509">8 </span>
+        <span style="color: #008000">0 </span>
+        <span style="color: #5d25b1"># </span>
+        <span style="color: #31afb7">= </span>
+        <span style="color: #ce1a1a">v </span>
+        <span style="color: #008000">7 </span>
+        <span style="color: #fff">m</span>
+        <span style="color: #5d25b1">b</span>
+        <span style="color: #a5c509">" </span>
+        <span style="color: #008000">| </span>
+        <span style="color: #fff">y </span>
+        <span style="color: #5d25b1">9 </span>
+        <span style="color: #a5c509"># </span>
+        <span style="color: #5d25b1">8 </span>
+        <span style="color: #ce1a1a">M </span>
+        <span style="color: #31afb7">] </span>
+        <span style="color: #a97619">_ </span>
+        <span style="color: #a5c509">+ </span>
+        <span style="color: #008000">k</span>
+        <span style="color: #a97619">l </span>
+        <span style="color: #ce1a1a">$ </span>
+        <span style="color: #5d25b1">#</span>
+        <span style="color: #a97619">m</span>
+        <span style="color: #fff">n </span>
+        <span style="color: #31afb7">x </span>
+        <span style="color: #008000">-</span>
+        <span style="color: #31afb7">( </span>
+        <span style="color: #a97619">]</span>
+        <span style="color: #a5c509">e </span>
+        <span style="color: #5d25b1">f </span>
+        <span style="color: #008000">l</span>
+        <span style="color: #fff">]</span>
+        <span style="color: #ce1a1a">> </span>
+        <span style="color: #31afb7">! </span>
+        <span style="color: #5d25b1">0</span>
+        <span style="color: #a97619">3 </span>
+        <span style="color: #008000">@</span>
+        <span style="color: #a5c509">j</span>
+        <span style="color: #ce1a1a">n</span>
+        <span style="color: #31afb7">o </span>
+        <span style="color: #008000">x</span>
+        <span style="color: #a97619">~</span>
+        <span style="color: #a5c509">`</span>
+        <span style="color: #fff">.</span>
+        <span style="color: #31afb7">x</span>
+        <span style="color: #5d25b1">l </span>
+        <span style="color: #ce1a1a">t</span>
+        <span style="color: #008000">y</span>
+        <span style="color: a97619">]</span>
+        <span style="color: 31afb7">[</span>
+        <span style="color: fff">s</span>
+        <span style="color: ce1a1a">x </span>
+        <span style="color: 008000">k </span>
+        <span style="color: 5d25b1">j </span>
       </div>
       <div class="left">
-        01100001 01101100 00100000 01100110 01101111 01110010 01100001 01101100 00100000 01100110
+        <span style="color: #31afb7">d</span>
+        <span style="color: #5d25b1">s</span>
+        <span style="color: #a5c509">K </span>
+        <span style="color: #008000">7 </span>
+        <span style="color: #5d25b1">& </span>
+        <span style="color: #31afb7">[ </span>
+        <span style="color: #ce1a1a">*</span>
+        <span style="color: #008000">h </span>
+        <span style="color: #fff">^</span>
+        <span style="color: #5d25b1">% </span>
+        <span style="color: #a5c509">u </span>
+        <span style="color: #008000">x </span>
+        <span style="color: #fff">5 </span>
+        <span style="color: #5d25b1">8 </span>
+        <span style="color: #a5c509">0</span>
+        <span style="color: #5d25b1">0</span>
+        <span style="color: #ce1a1a">M</span>
+        <span style="color: #31afb7">< </span>
+        <span style="color: #a97619">K</span>
+        <span style="color: #a5c509">! </span>
+        <span style="color: #008000">@ </span>
+        <span style="color: #a97619">&</span>
+        <span style="color: #ce1a1a">6</span>
+        <span style="color: #5d25b1">^</span>
+        <span style="color: #a97619">d </span>
+        <span style="color: #fff">j</span>
+        <span style="color: #31afb7">k</span>
+        <span style="color: #008000">n </span>
+        <span style="color: #31afb7">7</span>
+        <span style="color: #a97619">0 </span>
+        <span style="color: #a5c509">:</span>
+        <span style="color: #5d25b1">9</span>
+        <span style="color: #008000">3</span>
+        <span style="color: #fff">j</span>
+        <span style="color: #ce1a1a">x </span>
+        <span style="color: #31afb7">p</span>
+        <span style="color: #5d25b1">0 </span>
+        <span style="color: #a97619">b</span>
+        <span style="color: #008000">x</span>
+        <span style="color: #a5c509">, </span>
+        <span style="color: #ce1a1a">8</span>
+        <span style="color: #31afb7">9</span>
+        <span style="color: #008000">0 </span>
+        <span style="color: #a97619">Q</span>
+        <span style="color: #a5c509">w </span>
+        <span style="color: #fff">;</span>
+        <span style="color: #31afb7">é </span>
+        <span style="color: #5d25b1">" </span>
+        <span style="color: #ce1a1a">></span>
+        <span style="color: #008000">?</span>
+        <span style="color: a97619">7 </span>
+        <span style="color: 31afb7">9 </span>
+        <span style="color: fff">3</span>
+        <span style="color: ce1a1a">@ </span>
+        <span style="color: 008000">[ </span>
+        <span style="color: 5d25b1">5 </span>
+
+        <span style="color: #31afb7">d</span>
+        <span style="color: #5d25b1">s</span>
+        <span style="color: #a5c509">K </span>
+        <span style="color: #008000">7 </span>
+        <span style="color: #5d25b1">& </span>
+        <span style="color: #31afb7">[ </span>
+        <span style="color: #ce1a1a">*</span>
+        <span style="color: #008000">h </span>
+        <span style="color: #fff">^</span>
+        <span style="color: #5d25b1">% </span>
+        <span style="color: #a5c509">u </span>
+        <span style="color: #008000">x </span>
+        <span style="color: #fff">5 </span>
+        <span style="color: #5d25b1">8 </span>
+        <span style="color: #a5c509">0</span>
+        <span style="color: #5d25b1">0</span>
+        <span style="color: #ce1a1a">M</span>
+        <span style="color: #31afb7">< </span>
+        <span style="color: #a97619">K</span>
+        <span style="color: #a5c509">! </span>
+        <span style="color: #008000">@ </span>
+        <span style="color: #a97619">&</span>
+        <span style="color: #ce1a1a">6</span>
+        <span style="color: #5d25b1">^</span>
+        <span style="color: #a97619">d </span>
+        <span style="color: #fff">j</span>
+        <span style="color: #31afb7">k</span>
+        <span style="color: #008000">n </span>
+        <span style="color: #31afb7">7</span>
+        <span style="color: #a97619">0 </span>
+        <span style="color: #a5c509">:</span>
+        <span style="color: #5d25b1">9</span>
+        <span style="color: #008000">3</span>
+        <span style="color: #fff">j</span>
+        <span style="color: #ce1a1a">x </span>
+        <span style="color: #31afb7">p</span>
+        <span style="color: #5d25b1">0 </span>
+        <span style="color: #a97619">b</span>
+        <span style="color: #008000">x</span>
+        <span style="color: #a5c509">, </span>
+        <span style="color: #ce1a1a">8</span>
+        <span style="color: #31afb7">9</span>
+        <span style="color: #008000">0 </span>
+        <span style="color: #a97619">Q</span>
+        <span style="color: #a5c509">w </span>
+        <span style="color: #fff">;</span>
+        <span style="color: #31afb7">é </span>
+        <span style="color: #5d25b1">" </span>
+        <span style="color: #ce1a1a">></span>
+        <span style="color: #008000">?</span>
+        <span style="color: a97619">7 </span>
+        <span style="color: 31afb7">9 </span>
+        <span style="color: fff">3</span>
+        <span style="color: ce1a1a">@ </span>
+        <span style="color: 008000">[ </span>
+        <span style="color: 5d25b1">5 </span>
       </div>
     </div>
 
