--- a/src/app/settings/default-routing/specific-server/specific-server.component.scss
+++ b/src/app/settings/default-routing/specific-server/specific-server.component.scss
@@ -16,7 +16,7 @@
 
   input {
     height: 25px;
-    width: 210px;
+    width: 100%;
     padding-left: 30px;
     background-color: $primary-bg-light;
     border: 0;
@@ -25,11 +25,10 @@
     color: #fff;
   }
 
-  i {
+  img {
     position: absolute;
-    left: 0;
-    top: 0;
-    line-height: 25px;
+    left: 7px;
+    top: 4px;
   }
 
   .fa-search {
@@ -44,11 +43,9 @@
   float: right;
   display: inline-block;
   cursor: pointer;
-  i {
-    color: #fff;
-    padding: 0 5px;
-    font-size: 16px;
-    line-height: 25px;
+
+  img {
+    padding: 5px 5px 0 5px;
     opacity: 0.5;
     &.checked { opacity: 1; }
   }
