Update index page header

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -3,17 +3,21 @@
   <!-- Top Header Banner -->
   <div id="header__main">
     <!-- Account link -->
-    <a routerLink="/account">
-      <img class="logo" src="/assets/account.png">
-    </a>
+    <div class="account">
+      <a routerLink="/account">
+        <img class="logo" src="/assets/account.png">
+      </a>
+    </div>
 
     <!-- Center Logo -->
     <img class="title" src="/assets/logo.png">
 
     <!-- Settings link -->
-    <a routerLink="/settings" class="btn__settings">
-      <img class="gear" src="/assets/gear.png" alt="">
-    </a>
+    <div class="settings">
+      <a routerLink="/settings">
+        <img class="gear" src="/assets/gear.png" alt="">
+      </a>
+    </div>
   </div>
 
   <!-- Cypherpunk is disabled screen -->
