Add reset site override button

--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -44,6 +44,12 @@
         </label>
       </div>
     </div>
+
+    <div class="override" (click)="resetSiteOverrides()" [ngClass]="{ 'disabled': !hasOverrides }">
+      <div class="override-text left">
+        Remove Site Specific Overrides
+      </div>
+    </div>
   </section>
 
   <!-- Proxy Modes -->
