--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -67,6 +67,19 @@
   .malware-text { padding-top: 5px; }
 }
 
+.override {
+  background-color: $primary-bg;
+  padding: 10px;
+  color: #fff;
+  overflow: auto;
+  border-bottom: 1px solid #0d1e26;
+  cursor: pointer;
+  .override-text { padding: 5px 0; }
+  &:hover { background-color: $primary-bg-dark; }
+  &.disabled { opacity: 0.5; cursor: default; }
+  &.disabled:hover { background-color: $primary-bg; }
+}
+
 .option {
   @include pad(0 rem(10) 0 rem(30));
   @include span-columns(12);
