--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -205,16 +205,19 @@
         }
       }
 
+      .no-wrap {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
       .subtitle {
         margin-top: rem(10);
         text-align: center;
         font-weight: 200;
         max-width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
 
-        &.bold {font-weight: 400; }
+        &.bold { font-weight: 400; }
         a {
           @include display(block);
           line-height: 1.35rem;
