Crypto Profile page in settings

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -12,7 +12,15 @@
     </div>
   </div>
 
-  <!-- Default Routing -->
+  <!-- Privacy Filter -->
+  <div (click)="goToView('app-crypto-profile')" class="switch-row highlighted clickable bottom-separator">
+    <div class="label half">Crypto Profile</div>
+    <div class="switch half">
+      <span class="forward-icon">&#x3009;</span>
+    </div>
+  </div>
+
+  <!-- Privacy Filter -->
   <div (click)="goToView('app-privacy-filter')" class="switch-row highlighted clickable bottom-separator">
     <div class="label half">Privacy Filter</div>
     <div class="switch half">
