--- a/src/app/settings/settings-controller.component.html
+++ b/src/app/settings/settings-controller.component.html
@@ -18,6 +18,10 @@
   <app-privacy-filter (changeView)="changeView($event)"></app-privacy-filter>
 </div>
 
+<div class="view-container child" [@slideIn]="type" *ngIf="currentView === 'app-crypto-profile'">
+  <app-crypto-profile (changeView)="changeView($event)"></app-crypto-profile>
+</div>
+
 <div class="view-container grandchild" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-specific-server'">
   <app-specific-server (changeView)="changeView($event)"></app-specific-server>
 </div>
