--- a/src/app/settings/crypto-profile/crypto-profile.component.html
+++ b/src/app/settings/crypto-profile/crypto-profile.component.html
@@ -12,7 +12,7 @@
       <div class="label">Max Speed</div>
       <div class="desc">No Additional encryption</div>
       <div class="info">
-        Cipher <span>NONE</span> Auth <span>SHA-1</span> Key <span>RSA-4096</span>
+        HTTP Proxy mode
       </div>
     </div>
   </div>
@@ -26,7 +26,7 @@
       <div class="label">Max Privacy</div>
       <div class="desc">Strong Encryption</div>
       <div class="info">
-        Cipher <span>AES-256-CBC</span> Auth <span>SHA-512</span> Key <span>RSA-4096</span>
+        HTTPS / TLS Proxy mode
       </div>
     </div>
   </div>
