--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -65,6 +65,26 @@ body {
 
 .page-header { background-color: $primary-bg; }
 
+.single-row {
+  @include row;
+  clear: both;
+  color: #fff;
+  background-color: $primary-bg-light;
+
+  .label {
+    @include span-columns(12);
+    @include pad(rem(10) rem(20) rem(10) rem(20));
+    line-height: 1.3;
+    text-align: left;
+  }
+  .desc {
+    @include span-columns(12);
+    @include pad(rem(10) rem(20) rem(10) rem(20));
+    color: rgba(255, 255, 255, 0.6);
+    text-align: left;
+  }
+}
+
 .double-row {
   @include row;
   clear: both;
