Remove Default Routing view as it is redundant

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -3,16 +3,7 @@
     <span class="back-icon">&#x3008;</span>Settings
   </div>
 
-  <!-- Default Routing -->
-  <div (click)="goToView('app-default-routing')" class="switch-row highlighted clickable bottom-separator">
-    <div class="label half">Default Routing</div>
-    <div class="switch half">
-      {{defaultRouting()}}
-      <span class="forward-icon">&#x3009;</span>
-    </div>
-  </div>
-
-  <!-- Privacy Filter -->
+  <!-- Crypto Profile -->
   <div (click)="goToView('app-crypto-profile')" class="switch-row highlighted clickable bottom-separator">
     <div class="label half">Crypto Profile</div>
     <div class="switch half">
