--- a/src/app/settings/crypto-profile/crypto-profile.component.scss
+++ b/src/app/settings/crypto-profile/crypto-profile.component.scss
@@ -3,7 +3,7 @@
 @import '../../../scss/variables';
 
 .option {
-  height: rem(95);
+  height: 95px;
   color: #fff;
   cursor: pointer;
   background-color: $primary-bg-light;
