--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,10 +12,10 @@ html, body {
 body {
   background-color: $primary-bg-dark;
   font-family: 'Dosis', sans-serif;
-  font-size: rem(14);
+  font-size: 14px;
   font-weight: 300;
-  width: rem(360);
-  height: rem(560);
+  width: 360px;
+  height: 560px;
   margin: 0;
   padding: 0;
 }
@@ -23,10 +23,10 @@ body {
 @-moz-document url-prefix() {
   body {
     overflow-y: -moz-hidden-unscrollable;
-    height: rem(560);
+    height: 560px;
   }
   #tutorial {
-    height: rem(560) !important;
+    height: 560px !important;
   }
 }
 
@@ -51,12 +51,12 @@ body {
 
 /* Reuseable Components */
 #header {
-  @include pad(0 rem(20));
-  height: rem(56);
-  line-height: rem(56);
+  @include pad(0 20px);
+  height: 56px;
+  line-height: 56px;
   cursor: pointer;
   color: #fff;
-  font-size: rem(18);
+  font-size: 18px;
   font-weight: bold;
   text-align: center;
   border-bottom: 2px solid #1b474b;
@@ -73,13 +73,13 @@ body {
 
   .label {
     @include span-columns(12);
-    @include pad(rem(10) rem(20) rem(10) rem(20));
+    @include pad(10px 20px 10px 20px);
     line-height: 1.3;
     text-align: left;
   }
   .desc {
     @include span-columns(12);
-    @include pad(rem(10) rem(20) rem(10) rem(20));
+    @include pad(10px 20px 10px 20px);
     color: rgba(255, 255, 255, 0.6);
     text-align: left;
   }
@@ -88,20 +88,20 @@ body {
 .double-row {
   @include row;
   clear: both;
-  height: rem(75);
+  height: 75px;
   color: #fff;
   background-color: $primary-bg-light;
   cursor: pointer;
 
   &:hover, &.checked:hover { background-color: darken($primary-bg-light, 5%); }
   &.checked {
-    background: $primary-bg-light url('/assets/checkmarks/icon-circle-check.png') no-repeat rem(10) 32%;
+    background: $primary-bg-light url('/assets/checkmarks/icon-circle-check.png') no-repeat 10px 32%;
   }
   .label {
     @include span-columns(12);
-    @include pad(0 0 0 rem(32));
-    height: rem(40);
-    line-height: rem(52);
+    @include pad(0 0 0 32px);
+    height: 40px;
+    line-height: 52px;
     text-align: left;
     div { @include display(inline-block); }
     &.half { @include span-columns(6); }
@@ -109,25 +109,25 @@ body {
   .action {
     @include span-columns(6);
     @include omega;
-    @include pad(0 rem(20) 0 0);
-    height: rem(40);
-    line-height: rem(52);
+    @include pad(0 20px 0 0);
+    height: 40px;
+    line-height: 52px;
     text-align: right;
     color: #8dfffc;
   }
   .desc {
     @include span-columns(12);
-    @include pad(0 0 0 rem(32));
+    @include pad(0 0 0 32px);
     color: rgba(255, 255, 255, 0.6);
     text-align: left;
     div { @include display(inline-block); }
   }
   &.extended-desc {
     &.checked {
-      background: $primary-bg-light url('/assets/checkmarks/icon-circle-check.png') no-repeat rem(10) rem(19);
+      background: $primary-bg-light url('/assets/checkmarks/icon-circle-check.png') no-repeat 10px 19px;
     }
     .desc {
-      @include pad(0 rem(32) 0 rem(32));
+      @include pad(0 32px 0 32px);
       font-size: 0.75rem;
     }
     @include pad(0 0 1rem 0);
@@ -138,11 +138,11 @@ body {
 .switch-row {
   @include row;
   clear: both;
-  height: rem(40);
+  height: 40px;
   color: #fff;
   &.large {
-    height: rem(50);
-    line-height: rem(50);
+    height: 50px;
+    line-height: 50px;
     background-color: #0E063D;
   }
   &.highlighted {
@@ -153,7 +153,7 @@ body {
     &:hover { background-color: darken($primary-bg-light, 5%); }
   }
   &.selectable {
-    @include pad(0 0 0 rem(10));
+    @include pad(0 0 0 10px);
     cursor: pointer;
     &:hover, &.checked:hover { background-color: darken($primary-bg-light, 5%); }
     &.checked {
@@ -162,9 +162,9 @@ body {
   }
   .label {
     @include span-columns(9);
-    @include pad(0 0 0 rem(20));
-    height: rem(40);
-    line-height: rem(40);
+    @include pad(0 0 0 20px);
+    height: 40px;
+    line-height: 40px;
     text-align: left;
     div { @include display(inline-block); }
     &.half { @include span-columns(6); }
@@ -172,17 +172,17 @@ body {
   }
   &.large.top-separator { border-top: solid 2px $border--separator; }
   &.large .label {
-    height: rem(50);
-    line-height: rem(50);
+    height: 50px;
+    line-height: 50px;
     background-color: transparent;
   }
   &.large .label-switch { margin-top: 5px; }
   .switch {
     @include span-columns(3);
     @include omega;
-    @include pad(rem(8) rem(20) rem(8) 0);
-    height: rem(24);
-    line-height: rem(24);
+    @include pad(8px 20px 8px 0);
+    height: 24px;
+    line-height: 24px;
     text-align: right;
     color: #8dfffc;
     &.half { @include span-columns(6); }
@@ -192,18 +192,18 @@ body {
 .back-icon {
   @include transform(scale(2,1));
   @include display(inline-block);
-  margin-right: rem(12);
-  margin-left: rem(-10);
-  font-size: rem(11);
+  margin-right: 12px;
+  margin-left: -10px;
+  font-size: 11px;
 }
 
 .forward-icon {
   @include transform(scale(2,1));
   @include display(inline-block);
-  margin-right: rem(-10);
-  margin-left: rem(12);
+  margin-right: -10px;
+  margin-left: 12px;
   color: #8dfffc;
-  font-size: rem(11);
+  font-size: 11px;
 }
 
 .bottom-separator { border-bottom: $border--separator; }
@@ -219,11 +219,11 @@ body {
       background: url('/assets/switches/icon-power.png') no-repeat 50%;
       height: 100%;
       cursor: pointer;
-      width: rem(34);
+      width: 34px;
       &.large {
         background: url('/assets/switches/icon-power@2x.png') no-repeat 50%;
-        width: rem(48);
-        height: rem(60);
+        width: 48px;
+        height: 60px;
       }
     }
 
@@ -233,8 +233,8 @@ body {
       background-position-y: 35%;
       &.large {
         background: url('/assets/switches/icon-key@2x.png') no-repeat 50%;
-        width: rem(48);
-        height: rem(60);
+        width: 48px;
+        height: 60px;
       }
     }
   }
@@ -293,7 +293,7 @@ body {
       }
 
       &::after {
-        @include position(absolute, rem(3) 0 0 rem(4));
+        @include position(absolute, 3px 0 0 4px);
         @include size($knob-size);
         background: $knob-color;
         border-radius: $knob-radius;
@@ -318,8 +318,8 @@ body {
         &::before { transform: scale(0); }
         &::after {
           background: $knob-active-color;
-          left: rem(22);
-          top: rem(3);
+          left: 22px;
+          top: 3px;
         }
       }
     }
@@ -330,7 +330,7 @@ a {
   color: rgb(255, 255, 255);
   outline: none;
   text-decoration: none;
-  font-size: rem(12);
+  font-size: 12px;
 
   &:hover, &:active, &:visited {
     transition: all 0.3s ease;
@@ -352,20 +352,20 @@ a {
 }
 
 .country-select {
-  height: rem(488);
+  height: 488px;
   width: 100%;
   overflow-y: auto;
   color: #fff;
   font-weight: 200;
 
   .region {
-    @include pad(0 rem(30));
+    @include pad(0 30px);
     @include span-columns(12);
     background-color: $primary-bg;
-    height: rem(32);
+    height: 32px;
     color: #8dfffc;
-    font-size: rem(14);
-    line-height: rem(32);
+    font-size: 14px;
+    line-height: 32px;
     text-transform: uppercase;
     position: relative;
     margin-bottom: 10px;
@@ -402,12 +402,12 @@ a {
   }
 
   .location-row {
-    @include pad(0 rem(10) 0 rem(30));
+    @include pad(0 10px 0 30px);
     @include span-columns(12);
     display: inline-block;
     width: 80%;
-    height: rem(35);
-    line-height: rem(35);
+    height: 35px;
+    line-height: 35px;
     text-align: left;
     font-weight: 200;
     cursor: pointer;
@@ -417,23 +417,23 @@ a {
       display: block;
       float: left;
     }
-    .flag { padding-top: rem(6); }
-    .name { margin-left: rem(8); }
+    .flag { padding-top: 6px; }
+    .name { margin-left: 8px; }
     .premium {
       background: #010011;
       border-radius: 2px;
       padding: 1px 3px;
       color: #ffe49a;
       position: relative;
-      top: rem(-1);
-      font-size: rem(12);
-      margin-left: rem(10);
+      top: -1px;
+      font-size: 12px;
+      margin-left: 10px;
       border: 1px solid #ff7857;
     }
     .unavailable {
       font-weight: 400;
-      font-size: rem(12);
-      margin-left: rem(10);
+      font-size: 12px;
+      margin-left: 10px;
       background-color: #010011;
       padding: 1px 3px;
       border-radius: 2px;
@@ -443,8 +443,8 @@ a {
   .starred {
     display: inline-block;
     width: 20%;
-    height: rem(35);
-    line-height: rem(35);
+    height: 35px;
+    line-height: 35px;
     text-align: right;
     cursor: pointer;
     color: #ffe49a;
@@ -454,7 +454,7 @@ a {
 .scrolling-binary {
   color: rgba(255, 255, 255, 0.7);
   overflow: hidden;
-  font-size: rem(12);
+  font-size: 12px;
   .right {
     width: auto;
     white-space: nowrap;
